--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'partials/page_header' %>
+
 <div>
   <%= render :partial => 'categories/show', locals: {
     categories: @categories,
