Created title page header (no search bar) Cleaned up Devise routing. Updated Sign In and Sign Up VWs.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'partials/page_header' %>
+<%= render :partial => 'partials/header_search_bar' %>
 
 <div>
   <%= render :partial => 'categories/show', locals: {
