--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -40,8 +40,8 @@
             </div>
             <% else %>
             <div class="header-top-right float-right">
-            <a href="login" class="header-top-button"><i class="lni-lock"></i> Log In</a> |
-            <a href="register" class="header-top-button"><i class="lni-pencil"></i> Register</a>
+            <a href="/users/sign_in" class="header-top-button"><i class="lni-lock"></i> Sign In</a> |
+            <a href="/user/register" class="header-top-button"><i class="lni-pencil"></i> Register</a>
             </div>
             <% end %>
             <div class="post-btn">
