--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'partials/page_header' %>
+<%= render :partial => 'partials/header_search_bar' %>
 
 <div>
   <%= render :partial => 'categories/show', locals: {
