Sign In / Sign Up VWs done (finally).

--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -41,7 +41,7 @@
             <% else %>
             <div class="header-top-right float-right">
             <a href="/users/sign_in" class="header-top-button"><i class="lni-lock"></i> Sign In</a> |
-            <a href="/user/register" class="header-top-button"><i class="lni-pencil"></i> Register</a>
+            <a href="/users/sign_up" class="header-top-button"><i class="lni-pencil"></i> Sign Up</a>
             </div>
             <% end %>
             <div class="post-btn">
