--- a/app/views/devise/registrations/new.erb
+++ b/app/views/devise/registrations/new.erb
@@ -1,92 +1,95 @@
 <%= render :partial => 'partials/header_page_title', locals: {
-    title: 'Sign Up'
+    title: 'Register'
 } %>
 
 <!-- Content section Start --> 
 <section class="register section-padding">
     <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-12 col-xs-12">
-        <div class="register-form login-area">
-            <h3>Sign Up</h3>
-            <form class="login-form">
-            <%= form_for( resource, as: resource_name, url: new_user_registration_path(resource_name) , html: {class: "devise-form", role: "form"}) do |f| %>
-                <div class="form-group">
-                    <div class="input-icon">
-                        <i class="lni-user"></i>
-                        <%= f.text_field :username,
-                            autofocus: true,
-                            class: "form-control" ,
-                            id: "name",
-                            name: "email",
-                            pattern: "[0-9A-Za-z\s]+",
-                            placeholder:"Username",
-                            required: true,
-                            type: "regexp"
-                        %>
-                    </div>
-                </div> 
-                <div class="form-group">
-                    <div class="input-icon">
-                    <i class="lni-envelope"></i>
-                    <%= f.email_field :email,
-                        autofocus: true,
-                        class: "form-control",
-                        id: "sender-email",
-                        name: "email",
-                        placeholder:"Email Address"
-                    %>
-                    </div>
-                </div> 
-                <div class="form-group">
-                    <div class="input-icon">
-                        <i class="lni-lock"></i>
-                        <%= f.password_field :password,
-                            placeholder:"Password",
-                            name: "password",
-                            autocomplete: "off" ,
-                            class: "form-control"
-                        %>
-                    </div>
-                </div>  
-                <div class="form-group">
-                    <div class="input-icon">
-                        <i class="lni-lock"></i>
-                        <%= f.password_field :password_confirmation,
-                            placeholder:"Confirm Password",
-                            name: "password-confirmation",
-                            autocomplete: "off" ,
-                            class: "form-control"
-                        %>
-                    </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-12 col-xs-12">
+                <div class="register-form login-area">
+                    <h3>Sign Up</h3>
+                    <%= form_for(
+                        resource,
+                        as: resource_name,
+                        url: new_user_registration_path(resource_name) ,
+                        html: {class: "login-form", role: "form"}
+                    ) do |f| %>
+                        <div class="form-group">
+                            <%= devise_error_messages! %>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-icon">
+                                <i class="lni-user"></i>
+                                <%= f.text_field :username,
+                                    autofocus: true,
+                                    class: "form-control",
+                                    id: "name",
+                                    name: "email",
+                                    pattern: "[0-9A-Za-z\s]+",
+                                    placeholder:"Username",
+                                    required: true,
+                                    type: "regexp"
+                                %>
+                            </div>
+                        </div> 
+                        <div class="form-group">
+                            <div class="input-icon">
+                                <i class="lni-envelope"></i>
+                                <%= f.email_field :email,
+                                    autofocus: true,
+                                    class: "form-control",
+                                    id: "sender-email",
+                                    name: "email",
+                                    placeholder:"Email Address"
+                                %>
+                            </div>
+                        </div> 
+                        <div class="form-group">
+                            <div class="input-icon">
+                                <i class="lni-lock"></i>
+                                <%= f.password_field :password,
+                                    autocomplete: "off" ,
+                                    class: "form-control",
+                                    name: "password",
+                                    placeholder:"Password"
+                                %>
+                            </div>
+                        </div>    
+                        <div class="form-group">
+                            <div class="input-icon">
+                                <i class="lni-lock"></i>
+                                <%= f.password_field :password_confirmation,
+                                    placeholder:"Confirm Password",
+                                    name: "password-confirmation",
+                                    autocomplete: "off" ,
+                                    class: "form-control"
+                                %>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-icon" style="margin: auto; width: 75%; border: 0px solid green;">
+                                <%= recaptcha_tags %>
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            <div class="custom-control custom-checkbox">
+                                <%= f.check_box :tos_agreement, name: 'tos_agreement' %>
+                                <%= f.label :tos_agreement, 'By registering, you accept our Terms of Servcie' %>
+                            </div>
+                        </div>     
+                        <div class="text-center">
+                            <%= f.submit "Sign Up", class: "btn btn-common log-btn" %>
+                        </div>
+                        <div class="form-group mt-4">
+                            <ul class="form-links">
+                                <li class="float-right"><a href="/users/sign_in">Back to Login</a></li>
+                            </ul>
+                        </div> 
+                    <% end %>
                 </div>
-                <div class="form-group">
-                    <div class="input-icon">
-                        <%= recaptcha_tags %>
-                    </div>
-                </div>  
-                <div class="form-group mb-3">
-                    <div class="custom-control custom-checkbox">
-                    <%= f.check_box :tos_agreement,
-                        name: 'tos_agreement'
-                    %>
-                    <%= f.label :tos_agreement, 'By registering, you accept our Terms of Servcie' %>
-                    </div>
-                </div>   
-                <div class="text-center">
-                    <%= f.submit "Sign Up", class: "btn btn-common log-btn" %>
-                </div>
-
-                <div class="form-group mt-4">
-                    <ul class="form-links">
-                    <li class="float-right"><a href="login.html">Back to Login</a></li>
-                    </ul>
-                </div> 
-
-            <% end %>
+            </div>
         </div>
-        </div>
-    </div>
     </div>
 </section>
 <!-- Content section End --> 
