--- a/app/views/devise/registrations/new.erb
+++ b/app/views/devise/registrations/new.erb
@@ -9,12 +9,15 @@
             <div class="col-lg-5 col-md-12 col-xs-12">
                 <div class="register-form login-area">
                     <h3>Sign Up</h3>
-                    <%= form_for(
-                        resource,
-                        as: resource_name,
-                        url: new_user_registration_path(resource_name) ,
-                        html: {class: "login-form", role: "form"}
-                    ) do |f| %>
+                        <%= form_for(
+                            resource,
+                            as: resource_name,
+                            url: user_registration_path,
+                            html: {
+                                class: "login-form"
+                                role: "form"
+                            }
+                        ) do |f| %>
                         <div class="form-group">
                             <%= devise_error_messages! %>
                         </div>
@@ -24,9 +27,9 @@
                                 <%= f.text_field :username,
                                     autofocus: true,
                                     class: "form-control",
-                                    id: "name",
-                                    name: "email",
-                                    pattern: "[0-9A-Za-z\s]+",
+                                    id: "username",
+                                    name: "username",
+                                    pattern: "[0-9A-Za-z_\s]+",
                                     placeholder:"Username",
                                     required: true,
                                     type: "regexp"
@@ -37,11 +40,12 @@
                             <div class="input-icon">
                                 <i class="lni-envelope"></i>
                                 <%= f.email_field :email,
-                                    autofocus: true,
                                     class: "form-control",
-                                    id: "sender-email",
+                                    id: "email",
                                     name: "email",
-                                    placeholder:"Email Address"
+                                    placeholder:"Email Address",
+                                    required: true,
+                                    type: "email"
                                 %>
                             </div>
                         </div> 
@@ -51,8 +55,10 @@
                                 <%= f.password_field :password,
                                     autocomplete: "off" ,
                                     class: "form-control",
+                                    id: "password",
                                     name: "password",
-                                    placeholder:"Password"
+                                    placeholder:"Password",
+                                    required: true
                                 %>
                             </div>
                         </div>    
@@ -60,10 +66,11 @@
                             <div class="input-icon">
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password_confirmation,
-                                    placeholder:"Confirm Password",
-                                    name: "password-confirmation",
                                     autocomplete: "off" ,
-                                    class: "form-control"
+                                    class: "form-control",
+                                    name: "password-confirmation",
+                                    placeholder:"Confirm Password",
+                                    required: true
                                 %>
                             </div>
                         </div>
@@ -74,7 +81,13 @@
                         </div>
                         <div class="form-group mb-3">
                             <div class="custom-control custom-checkbox">
-                                <%= f.check_box :tos_agreement, name: 'tos_agreement' %>
+                                <%= f.check_box :tos_agreement,
+                                    as: :boolean,
+                                    checked_value: '1',
+                                    id: "tos_agreement",
+                                    name: 'tos_agreement',
+                                    unchecked_value: '0'
+                                %>
                                 <%= f.label :tos_agreement, 'By registering, you accept our Terms of Servcie' %>
                             </div>
                         </div>     
