DELETED overlay in DEVISE VW as it was no used. FIXED new user VW filename

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,10 +13,7 @@
                             resource,
                             as: resource_name,
                             url: user_registration_path,
-                            html: {
-                                class: "login-form"
-                                role: "form"
-                            }
+                            html: { class: "login-form" }
                         ) do |f| %>
                         <div class="form-group">
                             <%= devise_error_messages! %>
