--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'partials/header_page_title', locals: {
-    title: 'Register'
+    title: 'Sign Up'
 } %>
 
 <!-- Content section Start --> 
@@ -29,7 +29,8 @@
                                     pattern: "[0-9A-Za-z_\s]+",
                                     placeholder:"Username",
                                     required: true,
-                                    type: "regexp"
+                                    type: "regexp",
+                                    value: "testuser"
                                 %>
                             </div>
                         </div> 
@@ -42,7 +43,8 @@
                                     name: "email",
                                     placeholder:"Email Address",
                                     required: true,
-                                    type: "email"
+                                    type: "email",
+                                    value: "testuser@testemail.com"
                                 %>
                             </div>
                         </div> 
@@ -55,7 +57,8 @@
                                     id: "password",
                                     name: "password",
                                     placeholder:"Password",
-                                    required: true
+                                    required: true,
+                                    value: "~Asdf1234"
                                 %>
                             </div>
                         </div>    
@@ -67,7 +70,8 @@
                                     class: "form-control",
                                     name: "password-confirmation",
                                     placeholder:"Confirm Password",
-                                    required: true
+                                    required: true,
+                                    value: "~Asdf1234"
                                 %>
                             </div>
                         </div>
@@ -85,7 +89,7 @@
                                     name: 'tos_agreement',
                                     unchecked_value: '0'
                                 %>
-                                <%= f.label :tos_agreement, 'By registering, you accept our Terms of Servcie' %>
+                                <%= f.label :tos_agreement, 'By Signing Up, you accept our Terms of Servcie' %>
                             </div>
                         </div>     
                         <div class="text-center">
