FIXED links in _partials. Minor update to auto-sync

--- a/app/views/partials/_breadcrumb.erb
+++ b/app/views/partials/_breadcrumb.erb
@@ -1,7 +1,7 @@
 <!-- Breadcrumb Start -->
 <div class="breadcrumb-wrapper"></div>
     <ol class="breadcrumb">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="/">Home</a></li>
     <% if (@category) %>
         <li><span>&nbsp;&nbsp;/&nbsp;&nbsp;</span> <%= category.name %></li>
     <% end %>
