--- a/app/views/partials/_footer.erb
+++ b/app/views/partials/_footer.erb
@@ -7,7 +7,7 @@
         <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
             <div class="widget">
             <div class="footer-logo">
-                <a href="index.html" class="navbar-brand">
+                <a href="/" class="navbar-brand">
                     <img src="/assets/img/ch_small_grey.png" alt="">
                 </a>
             </div>
