--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
                         <%= form_for(
                             resource,
                             as: resource_name,
-                            url: user_registration_path,
+                            url: registration_path(resource_name),
                             html: { class: "login-form" }
                         ) do |f| %>
                         <div class="form-group">
@@ -22,14 +22,7 @@
                             <div class="input-icon">
                                 <i class="lni-user"></i>
                                 <%= f.text_field :username,
-                                    autofocus: true,
                                     class: "form-control",
-                                    id: "username",
-                                    name: "username",
-                                    pattern: "[0-9A-Za-z_\s]+",
-                                    placeholder:"Username",
-                                    required: true,
-                                    type: "regexp",
                                     value: "testuser"
                                 %>
                             </div>
@@ -39,11 +32,6 @@
                                 <i class="lni-envelope"></i>
                                 <%= f.email_field :email,
                                     class: "form-control",
-                                    id: "email",
-                                    name: "email",
-                                    placeholder:"Email Address",
-                                    required: true,
-                                    type: "email",
                                     value: "testuser@testemail.com"
                                 %>
                             </div>
@@ -52,12 +40,7 @@
                             <div class="input-icon">
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password,
-                                    autocomplete: "off" ,
                                     class: "form-control",
-                                    id: "password",
-                                    name: "password",
-                                    placeholder:"Password",
-                                    required: true,
                                     value: "~Asdf1234"
                                 %>
                             </div>
@@ -66,32 +49,21 @@
                             <div class="input-icon">
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password_confirmation,
-                                    autocomplete: "off" ,
                                     class: "form-control",
-                                    name: "password-confirmation",
-                                    placeholder:"Confirm Password",
-                                    required: true,
                                     value: "~Asdf1234"
                                 %>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="input-icon" style="margin: auto; width: 75%; border: 0px solid green;">
+                            <div class="input-icon" style="margin: auto; width: 75%; border: 0px solid black;">
                                 <%= recaptcha_tags %>
                             </div>
                         </div>
                         <div class="form-group mb-3">
                             <div class="custom-control custom-checkbox">
-                                <%= f.check_box :tos_agreement,
-                                    as: :boolean,
-                                    checked_value: '1',
-                                    id: "tos_agreement",
-                                    name: 'tos_agreement',
-                                    unchecked_value: '0'
-                                %>
-                                <%= f.label :tos_agreement, 'By Signing Up, you accept our Terms of Servcie' %>
+                                <%= f.check_box :tos_agreement %>
                             </div>
-                        </div>     
+                        </div>
                         <div class="text-center">
                             <%= f.submit "Sign Up", class: "btn btn-common log-btn" %>
                         </div>
