TOS agreement requirement now works during sign-up

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -61,7 +61,8 @@
                         </div>
                         <div class="form-group mb-3">
                             <div class="custom-control custom-checkbox">
-                                <%= f.check_box :tos_agreement %>
+                                <%= f.check_box :agreement %>
+                                <%= f.label :tos_agreement, 'By Signing Up, you accept our Terms of Servcie' %>
                             </div>
                         </div>
                         <div class="text-center">
