--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,38 +1,47 @@
-<div class="container" style="margin-top:40px" id="app_view_devise">
-    <div class="row">
-        <div class="col-sm-6 col-md-5 col-sm-offset-3 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="sign-h"><span id="sign-icon"><i class="glyphicon glyphicon-lock"></i></span>Forgot password?</h3>
-                </div>
-                <div class="panel-body">
-                    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-                    <%= devise_error_messages! %>
-                        <fieldset>
-                            <div class="row">
+<%= render :partial => 'partials/header_page_title', locals: {
+    title: 'Forgot Password'
+} %>
+
+<!-- Content section Start --> 
+<section class="section-padding">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-12 col-xs-12">
+                <div class="forgot login-area">
+                    <h3>
+                    Forgot Password
+                    </h3>
+                    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "login-form" }) do |f| %>
+                        <%= devise_error_messages! %>
+                        <div class="form-group">
+                            <div class="input-icon">
+                            <i class="icon lni-user"></i>
+                            <%= f.email_field :email,
+                                autofocus: true,
+                                class: "form-control",
+                                id: "email",
+                                name: "email",
+                                placeholder:"Email Address"
+                            %>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-12 col-md-10  col-md-offset-1 ">
-                                    <div class="form-group">
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <i class="glyphicon glyphicon-envelope"></i>
-                                            </span>
-                                            <%= f.email_field :email, placeholder:"Email", autofocus: true, class: "form-control" %>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <%= f.submit "Reset Your Password", class: "btn btn-lg btn-success btn-block" %>
-                                    </div>
-                                </div>
-                            </div>
-                        </fieldset>
+                        </div>
+                        <div class="text-center">
+                            <%= f.submit "Send me my Password", class: "btn btn-common log-btn" %>
+                        </div>
+                        <div class="form-group mt-4">
+                            <ul class="form-links">
+                                <li class="float-left">
+                                    <%= link_to "Don't have an account?", '/users/sign_up' %>
+                                </li>
+                                <li class="float-right">
+                                    <%= link_to "Back to Login", '/users/sign_in' %><br>
+                                </li>
+                            </ul>
+                        </div>
                     <% end %>
-                </div>
-                <div class="panel-footer ">
-                    Don't have an account! <%= render "devise/shared/links" %>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+<!-- Content section End --> 
