--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -2,56 +2,63 @@
 <header id="header-wrap">
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
-    <div class="container">
-        <div class="theme-header clearfix">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            <span class="lni-menu"></span>
-            <span class="lni-menu"></span>
-            <span class="lni-menu"></span>
-            </button>
-            <a href="/" class="navbar-brand"><img src="/assets/img/ch_small_grey.png" alt=""></a>
-        </div>
-        <div class="collapse navbar-collapse" id="main-navbar">
-            <ul class="navbar-nav mr-auto w-100 justify-content-left">
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Categories <i class="lni-chevron-down"></i>
-                </a>
-                <ul class="dropdown-menu">
-                <% @categories.each do |category| %>
-                    <li><a class="dropdown-item" href="/categories/<%= category.id %>"><i class="fas fa-<%= category.icon %>"></i><%= category.name %></a></li>
-                <% end %>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/contact">
-                Contact
-                </a>
-            </li>
-            </ul>
-
-            <% if user_signed_in? %>
-            <div class="header-top-right float-right">
-                <%= link_to(user_path(current_user.username), class: "header-top-button") do %><i class="lni-lock"></i> Your Profile<% end %>
-                <%= link_to(destroy_user_session_path, method: :delete, class: "header-top-button") do %><i class="lni-exit"></i> Logout<% end %>
+        <div class="container">
+            <div class="theme-header clearfix">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar"
+                        aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        <span class="lni-menu"></span>
+                        <span class="lni-menu"></span>
+                        <span class="lni-menu"></span>
+                    </button>
+                    <a href="/" class="navbar-brand"><img src="/assets/img/ch_small_grey.png" alt="Connechub"></a>
+                </div>
+                <div class="collapse navbar-collapse" id="main-navbar">
+                    <ul class="navbar-nav mr-auto w-100 justify-content-left">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Categories <i class="lni-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <% @categories.each do |category| %>
+                                    <li><a class="dropdown-item" href="/categories/<%= category.id %>"><i
+                                                class="fas fa-<%= category.icon %>"></i>
+                                            <%= category.name %>
+                                        </a></li>
+                                    <% end %>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact"> Contact </a>
+                        Z</li>
+                        <% if user_signed_in? %>
+                        <li class="nav-item">
+                            <%= link_to(user_path(current_user.username), class: "header-top-button" ) do %><i class="lni-lock"></i>Your Profile<% end %>
+                        </li>
+                        <li class="nav-item">
+                            <%= link_to(destroy_user_session_path, method: :delete, class: "header-top-button" ) do %><i class="lni-exit"></i> Logout<% end %>
+                        </li>
+                        <% else %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/users/sign_up"> <i class="lni-pencil"></i> Sign Up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/users/sign_in"> <i class="lni-lock"></i> Sign In</a>
+                        </li>
+                        <% end %>
+                        <li class="header-top-right float-right" style="padding: 20px 20px 20px 105px;">
+                            <a class="btn btn-common" href="/listings/new">
+                                <i class="lni-pencil-alt"></i> Post an Ad
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <% else %>
-            <div class="header-top-right float-right">
-                <a href="/users/sign_in" class="header-top-button"><i class="lni-lock"></i> Sign In</a> |
-                <a href="/users/sign_up" class="header-top-button"><i class="lni-pencil"></i> Sign Up</a>
-            </div>
-            <% end %>
-
-            <div class="post-btn">
-                <a class="btn btn-common" href="<%= new_listing_path %>"><i class="lni-pencil-alt"></i> Post an Ad</a>
-            </div>
         </div>
-        </div>
-    </div>
-    <div class="mobile-menu" data-logo="/assets/img/ch_small_grey.png"></div>
+        <div class="mobile-menu" data-logo="/assets/img/ch_small_grey.png"></div>
     </nav>
     <!-- Navbar End -->
 </header>
