Minor work on user side menu

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
                         <div class="form-group mb-3">
                             <div class="custom-control custom-checkbox">
                                 <%= f.check_box :agreement %>
-                                <%= f.label :tos_agreement, 'By Signing Up, you accept our Terms of Servcie' %>
+                                <%= f.label :agreement, 'By Signing Up, you accept our Terms of Servcie' %>
                             </div>
                         </div>
                         <div class="text-center">
