--- a/app/views/users/partials/_side_menu.html.erb
+++ b/app/views/users/partials/_side_menu.html.erb
@@ -8,23 +8,22 @@
                     </a>
                 </figure>
                 <div class="usercontent">
-                <h3>Hello USERNAME!</h3>
+                    <h3>Hello <%= current_user.username %></h3>
                 </div>
             </div>
             <nav class="navdashboard">
                 <ul>
-                <li>
-                    <a class="active" href="dashboard.html">
-                        <i class="lni-dashboard"></i>
-                        <span>Your listings</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="account-profile-setting.html">
-                        <i class="lni-cog"></i>
-                        <span>Profile Settings</span>
-                    </a>
-                </li>
+                    <li>
+                        <a class="active" href="dashboard.html">
+                        <%= link_to '/'+current_user.username do %>
+                            <i class="lni-dashboard"></i> <span>Your listings</span>
+                        <% end %>
+                    </li>
+                    <li>
+                        <%= link_to edit_user_registration_path do %>
+                            <i class="lni-cog"></i> <span>Profile Settings</span>
+                        <% end %>
+                    </li>
                 </ul>
             </nav>
         </div>
