--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,6 +16,7 @@
                             <div class="dashboard-box">
                                 <h2 class="dashbord-title">My Profile Settings</h2>
                             </div>
+                            <%= render :partial=> 'partials/flash_msg' %>
                             <%= form_for(
                                 resource,
                                 url: '/users/update',
@@ -42,7 +43,7 @@
                                     </div>
                                     <div class="form-group mb-3">
                                         <label class="control-label">Profile Image</label>
-                                        <%= f.file_field :avatar, class: "form-control input-md" %>
+                                        <%= f.file_field :avatar, class: "form-control" %>
                                     </div>
                                     <div class="form-group mb-3">
                                         <label class="control-label">Biography</label>
