--- a/app/views/partials/_flash_msg.erb
+++ b/app/views/partials/_flash_msg.erb
@@ -1,12 +1,8 @@
-<div class="container">
-    <div class="flash">
-        <% flash.each do |key, value| %>
-            <div class="alert alert-<%= key %> alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            <%= value %>
-            </div>
-        <% end %>
-    </div>
+<% flash.each do |key, value| %>
+<div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+    <%= value %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
+<% end %>
