Listing create form styled. REPLACED {TAB} with 4*{SPACE} in *.*css assets.

--- a/app/views/listings/payment.html.erb
+++ b/app/views/listings/payment.html.erb
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<%= render "processing_overlay" %>
+<%= render :partial => 'partials/processing_overlay' %>
 
 <script src="https://js.stripe.com/v3/"></script>
 
