--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -165,7 +165,7 @@
     </div>
 </div>
 
-<%= render "processing_overlay" %>
+<%= render :partial => 'partials/processing_overlay' %>
 
 <script>
 $(function () {
