--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<%= render "processing_overlay" %>
+<%= render :partial => 'partials/processing_overlay' %>
 
 <script>
 $("#listings_submit").on("click", function() {
