FIXED link of top menubar image back to home. REPLACED LogIn with SignIn. Working on signin process.

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -34,7 +34,7 @@
                                     <%= link_to "Don't have an account?", '/users/sign_up' %>
                                 </li>
                                 <li class="float-right">
-                                    <%= link_to "Back to Login", '/users/sign_in' %><br>
+                                    <%= link_to "Back to Sign In", '/users/sign_in' %><br>
                                 </li>
                             </ul>
                         </div>
