--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,5 +80,6 @@
     <script src="/assets/js/contact-form-script.js"></script>
     <script src="/assets/js/summernote.js"></script>
     
+    <script src="/assets/js/ch_listings.js"></script>
   </body>
 </html>
