--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -13,7 +13,9 @@
                         <span class="lni-menu"></span>
                         <span class="lni-menu"></span>
                     </button>
-                    <a href="/" class="navbar-brand"><img src="/assets/img/ch_small_grey.png" alt="Connechub"></a>
+                    <a href="/" class="navbar-brand">
+                        <img src="/assets/img/ch_small_grey.png" alt="Connechub">
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-left">
