REPLACED add simple_form with form_for

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -9,7 +9,7 @@
 
             <div class="panel-body">
 
-                <%= simple_form_for(@listing, html: {
+                <%= form_form_for(@listing, html: {
                     authenticity_token: true,
                     multipart: true,
                     class: 'form-horizontal ',
