Cont working on User mngt actions

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
                     <div class="inner-box">
                         <div class="tg-contactdetail">
                             <div class="dashboard-box">
-                                <h2 class="dashbord-title">My Profile Settings</h2>
+                                <h2 class="dashbord-title">Edit Your Profile</h2>
                             </div>
                             <%= render :partial=> 'partials/flash_msg' %>
                             <%= form_for(
