--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -536,7 +536,7 @@
                                         <ul> 
                                         <li>•	You must first click on<b> “Log in” </b> to your account</li>
                                         <li>•	Once you are signed in click on <b> “My Profile”</b> in the top right corner. </li>
-                                        <li>•	While on your <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“My Profile Settings”</b>    <br><br></li>
+                                        <li>•	While on your <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“Edit Your Profile”</b>    <br><br></li>
                                         <li>Once on the page you will see a list of all the Video Ads you have created. To edit your Video Ad click on <b>“Pencil Image“</b> to edit the Ad.     <br><br></li>
                                         <li>Once you click the <b>"Pencil Image"</b>, you will be sent to another page where you will be able to make changes to that ad.</li>
 
@@ -557,7 +557,7 @@
                                         <ul> 
                                         <li>•	You must first click on <b> “Log in”</b> to your account</li>
                                         <li>•	Once you are signed in click on <b> “My Profile”</b> in the top right corner.</li>
-                                        <li>•	While on your  <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“My Profile Settings”</b><br><br></li>
+                                        <li>•	While on your  <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“Edit Your Profile”</b><br><br></li>
                                         <li>Once on the page you will see a list of all the Video Ads you have created. To delete your Video Ad click on <b>“Trash Can Image“</b> to delete the Ad. <br><br></li>
                                         <li>Once you click the <b>"Trash Can Image"</b> icon, a pop-up box will appear with question "Are you sure? ", if so, click ok and your Ad is gone. </li>
                                         </ul>
@@ -623,7 +623,7 @@
                                         <ul> 
                                         <li>•	You must first click on<b> “Log in” </b> to your account</li>
                                         <li>•	Once you are signed in click on <b> “My Profile”</b> in the top right corner. </li>
-                                        <li>•	While on your <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“My Profile Settings”</b>    <br><br></li>
+                                        <li>•	While on your <b>“My Profile”</b> page click on <b>“My Ads”</b> located to the left of the page, under  <b>“Edit Your Profile”</b>    <br><br></li>
                                         <li>Once on the page you will see a list of all the Video Ads you have created. To <b>"Make as Sold"</b> your Video Ad click on <b>“Pencil Image“</b> to edit the Ad.     <br><br></li>
                                         <li>Once you click the <b>"Pencil Image"</b>, you will be sent to another page where you will be able to <b>"Make as Sold"</b>to that ad.</li>
 
