--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -126,7 +126,7 @@
                                     </div>
                                     <div class="form-group mb-3">
                                         <%= f.label :description %>
-                                        <%= f.input :description,
+                                        <%= f.text_field :description,
                                             # as: :trix_editor,
                                             class: "form-control",
                                             label: false,
