--- a/app/views/users/partials/_side_menu.html.erb
+++ b/app/views/users/partials/_side_menu.html.erb
@@ -5,7 +5,7 @@
             <% if current_user.avatar_file_name? %>
                 <figure>
                     <a href="#">
-                        <img src="<%= current_user.avatar_file_name %>" alt="<%= current_user.username %>">
+                        <img src="/system/users/avatars/000/000/001/thumb/<%= current_user.avatar_file_name %>" alt="<%= current_user.username %>">
                     </a>
                 </figure>
             <% end %>
