Cont working on listing new/upload. ADDED ServiceWorker assets.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,8 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/popper.js"></script>
-    <script src="/assets/js/bootstrap.js"></script>
+    <!-- Connechub Style -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/ch.css">
 
     <%= render "partials/header_meta" %>
 
@@ -60,6 +57,11 @@
 
     <%= render "partials/google_analytics" %>
 
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/popper.js"></script>
+    <script src="/assets/js/bootstrap.js"></script>
+
   </head>
   <body>
 
@@ -80,7 +82,11 @@
     <script src="/assets/js/form-validator.js"></script>
     <script src="/assets/js/contact-form-script.js"></script>
     <script src="/assets/js/summernote.js"></script>
-    
-    <script src="/assets/js/ch_listings.js"></script>
+
+    <script src="/assets/js/ch-comment.js"></script>
+    <script src="/assets/js/ch-listings.js"></script>
+    <script src="/assets/js/inspectlet.js"></script>
+    <script src="/assets/js/jquery.ui.widget.js"></script>
+    <script src="/assets/js/jquery.fileupload.js"></script>
   </body>
 </html>
