--- a/app/views/partials/_header_page_title.erb
+++ b/app/views/partials/_header_page_title.erb
@@ -3,6 +3,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+
+                <%= render :partial=> 'partials/flash_msg' %>
+
                 <div class="breadcrumb-wrapper">
                     <% if defined?(title) %>
                         <h2 class="product-title"><%= title %></h2>
