--- a/app/views/partials/_header_search_bar.erb
+++ b/app/views/partials/_header_search_bar.erb
@@ -6,7 +6,9 @@
             <div class="col-md-12 col-lg-9 col-xs-12 text-center">
                 <div class="contents-ctg">
 
-                    <%= render "partials/hero_search_bar" %>
+                    <%= render :partial=> 'partials/flash_msg' %>
+
+                    <%= render :partial=> 'partials/hero_search_bar' %>
 
                 </div>
             </div>
