--- a/app/views/users/partials/_item_summary.html.erb
+++ b/app/views/users/partials/_item_summary.html.erb
@@ -4,8 +4,8 @@
             <div class="dashboardbox">
                 <div class="icon"><i class="lni-write"></i></div>
                 <div class="contentbox">
-                <h2><a href="#">Total Ad Posted</a></h2>
-                <h3>480 Add Posted</h3>
+                    <h2><a>Free Listings</a></h2>
+                    <h3><%= user_listing_header_free %></h3>
                 </div>
             </div>
         </div>
@@ -13,8 +13,8 @@
             <div class="dashboardbox">
                 <div class="icon"><i class="lni-add-files"></i></div>
                 <div class="contentbox">
-                <h2><a href="#">Featured Ads</a></h2>
-                <h3>80 Add Posted</h3>
+                    <h2><a>Paid Listings</a></h2>
+                    <h3><%= user_listing_header_paid %></h3>
                 </div>
             </div>
         </div>
@@ -22,8 +22,8 @@
             <div class="dashboardbox">
                 <div class="icon"><i class="lni-support"></i></div>
                 <div class="contentbox">
-                <h2><a href="#">Offers / Messages</a></h2>
-                <h3>2040 Messages</h3>
+                    <h2><a>Comments</a></h2>
+                    <h3><%= user_listing_header_cmmt %></h3>
                 </div>
             </div>
         </div>
